// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders a Radius prop correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="blank figure"
    images={null}
    radius={3}
    shadow={null}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        null,
        <img
          alt="blank figure"
          className="br3 shadow-null w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "blank figure",
          "className": "br3 shadow-null w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          null,
          <img
            alt="blank figure"
            className="br3 shadow-null w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "blank figure",
            "className": "br3 shadow-null w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Image /> renders a Shadow prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="blank figure"
    images={null}
    radius={0}
    shadow={1}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        null,
        <img
          alt="blank figure"
          className="br0 shadow-1 w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "blank figure",
          "className": "br0 shadow-1 w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          null,
          <img
            alt="blank figure"
            className="br0 shadow-1 w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "blank figure",
            "className": "br0 shadow-1 w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Image /> renders alt text when passed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="horseback rider"
    images={null}
    radius={0}
    shadow={null}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        null,
        <img
          alt="horseback rider"
          className="br0 shadow-null w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "horseback rider",
          "className": "br0 shadow-null w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          null,
          <img
            alt="horseback rider"
            className="br0 shadow-null w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "horseback rider",
            "className": "br0 shadow-null w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Image /> renders an object of images correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="blank figure"
    images={
      Object {
        "desktop": Array [
          "http://via.placeholder.com/2400x1350/CDECFF",
          "http://via.placeholder.com/1600x900/CDECFF",
        ],
        "mobile": Array [
          "http://via.placeholder.com/800x450/CDECFF",
          "http://via.placeholder.com/800x450/CDECFF",
        ],
        "tablet": Array [
          "http://via.placeholder.com/1600x900/CDECFF",
          "http://via.placeholder.com/1600x900/CDECFF",
        ],
      }
    }
    radius={0}
    shadow={null}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <source
          media="(min-width: 60em)"
          srcSet="
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
        />,
        <source
          media="(min-width: 30em) and (max-width: 60em)"
          srcSet="
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
        />,
        <source
          media="(max-width: 30em)"
          srcSet="
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 1x,
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 2x"
        />,
        <img
          alt="blank figure"
          className="br0 shadow-null w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/2400x1350/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(min-width: 60em)",
          "srcSet": "
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/1600x900/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(min-width: 30em) and (max-width: 60em)",
          "srcSet": "
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/800x450/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(max-width: 30em)",
          "srcSet": "
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 1x,
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "blank figure",
          "className": "br0 shadow-null w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <source
            media="(min-width: 60em)"
            srcSet="
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
          />,
          <source
            media="(min-width: 30em) and (max-width: 60em)"
            srcSet="
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x"
          />,
          <source
            media="(max-width: 30em)"
            srcSet="
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 1x,
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 2x"
          />,
          <img
            alt="blank figure"
            className="br0 shadow-null w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/2400x1350/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(min-width: 60em)",
            "srcSet": "
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/2400x1350/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/1600x900/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(min-width: 30em) and (max-width: 60em)",
            "srcSet": "
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 1x,
            http://via.placeholder.com/1600x900/CDECFF,http://via.placeholder.com/1600x900/CDECFF 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/800x450/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(max-width: 30em)",
            "srcSet": "
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 1x,
          http://via.placeholder.com/800x450/CDECFF,http://via.placeholder.com/800x450/CDECFF 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "blank figure",
            "className": "br0 shadow-null w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Image /> renders defaults correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="blank figure"
    images={null}
    radius={0}
    shadow={null}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        null,
        <img
          alt="blank figure"
          className="br0 shadow-null w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "blank figure",
          "className": "br0 shadow-null w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          null,
          <img
            alt="blank figure"
            className="br0 shadow-null w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "blank figure",
            "className": "br0 shadow-null w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Image /> renders if the object is malformed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Image
    alt="blank figure"
    images={
      Object {
        "desktop": Array [],
        "mobile": Array [],
        "tablet": Array [],
      }
    }
    radius={0}
    shadow={null}
    url="http://via.placeholder.com/1600x900/CDECFF"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <source
          media="(min-width: 60em)"
          srcSet="
            null 1x,
            null 2x"
        />,
        <source
          media="(min-width: 30em) and (max-width: 60em)"
          srcSet="
            null 1x,
            null 2x"
        />,
        <source
          media="(max-width: 30em)"
          srcSet="
          null 1x,
          null 2x"
        />,
        <img
          alt="blank figure"
          className="br0 shadow-null w-100"
          src="http://via.placeholder.com/1600x900/CDECFF"
        />,
      ],
      "className": "image",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/1600x900/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(min-width: 60em)",
          "srcSet": "
            null 1x,
            null 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/1600x900/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(min-width: 30em) and (max-width: 60em)",
          "srcSet": "
            null 1x,
            null 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": "http://via.placeholder.com/1600x900/CDECFF",
        "nodeType": "host",
        "props": Object {
          "media": "(max-width: 30em)",
          "srcSet": "
          null 1x,
          null 2x",
        },
        "ref": null,
        "rendered": null,
        "type": "source",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "blank figure",
          "className": "br0 shadow-null w-100",
          "src": "http://via.placeholder.com/1600x900/CDECFF",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "picture",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <source
            media="(min-width: 60em)"
            srcSet="
            null 1x,
            null 2x"
          />,
          <source
            media="(min-width: 30em) and (max-width: 60em)"
            srcSet="
            null 1x,
            null 2x"
          />,
          <source
            media="(max-width: 30em)"
            srcSet="
          null 1x,
          null 2x"
          />,
          <img
            alt="blank figure"
            className="br0 shadow-null w-100"
            src="http://via.placeholder.com/1600x900/CDECFF"
          />,
        ],
        "className": "image",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/1600x900/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(min-width: 60em)",
            "srcSet": "
            null 1x,
            null 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/1600x900/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(min-width: 30em) and (max-width: 60em)",
            "srcSet": "
            null 1x,
            null 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": "http://via.placeholder.com/1600x900/CDECFF",
          "nodeType": "host",
          "props": Object {
            "media": "(max-width: 30em)",
            "srcSet": "
          null 1x,
          null 2x",
          },
          "ref": null,
          "rendered": null,
          "type": "source",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "blank figure",
            "className": "br0 shadow-null w-100",
            "src": "http://via.placeholder.com/1600x900/CDECFF",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "picture",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
